--- a/templates/share_layout/footer.html
+++ b/templates/share_layout/footer.html
@@ -2,11 +2,7 @@
     <div class="site-info" style="text-align: center">
         Copyright&copy;&nbsp;{{ CURRENT_YEAR }}&nbsp;
         <a href="/" target="blank">{{ SITE_NAME }}</a>
-        &nbsp;|&nbsp;
 
-        <a href="/sitemap.xml" title="SiteMap" target="_blank">
-            SiteMap
-        </a>
         &nbsp;|&nbsp;
         <a href="/feed" title="RSS Feed" target="_blank">
             RSS Feed
@@ -28,9 +24,9 @@
         Powered by
         <a href="https://www.djangoproject.com/" rel="nofollow" target="blank">Django</a>
         &nbsp;|&nbsp;
-        <a href="https://github.com/liangliangyy/DjangoWiki" rel="nofollow" target="blank">liangliangyy</a>
+        <a href="https://github.com/xuguangzong/WIKI" rel="nofollow" target="blank">xuguangzong</a>
         |
-        <a href="https://www.lylinux.net" target="blank">lylinux</a>
+        <a href="https://www.cnblogs.com/xuguangzong/" target="blank">xuguangzong</a>
         |
         本页面加载耗时:<!!LOAD_TIMES!!>s
     </div>
