--- a/templates/wiki/tags/sidebar.html
+++ b/templates/wiki/tags/sidebar.html
@@ -107,10 +107,10 @@
     <aside id="text-2" class="widget widget_text"><h3 class="widget-title">欢迎您star或者fork本站源代码</h3>
         <div class="textwidget">
 
-            <p><a href="https://github.com/liangliangyy/DjangoWiki" rel="nofollow"><img
-                    src="https://resource.lylinux.net/img.shields.io/github/stars/liangliangyy/djangowiki.svg?style=social&amp;label=Star"
-                    alt="GitHub stars"></a> <a href="https://github.com/liangliangyy/DjangoWiki" rel="nofollow"><img
-                    src="https://resource.lylinux.net/img.shields.io/github/forks/liangliangyy/djangowiki.svg?style=social&amp;label=Fork"
+            <p><a href="https://github.com/xuguangzong/WIKI" rel="nofollow"><img
+                    src="https://img.shields.io/github/stars/xuguangzong/WIKI"
+                    alt="GitHub stars"></a> <a href="https://github.com/xuguangzong/WIKI" rel="nofollow"><img
+                    src="https://img.shields.io/github/forks/xuguangzong/WIKI"
                     alt="GitHub forks"></a></p>
         </div>
     </aside>
@@ -128,7 +128,6 @@
                 <li><a href="{% url "wiki:refresh" %}" target="_blank">刷新缓存</a></li>
                 <li><a href="{% url 'owntracks:show_dates' %}" target="_blank">运动轨迹记录</a></li>
             {% endif %}
-            <li><a href="http://gitbook.lylinux.net" target="_blank" rel="nofollow">GitBook</a></li>
         </ul>
     </aside>
     <div id="rocket" class="show" title="点我返回顶部"></div>
