--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'share_layout/base_account.html' %}
+{% load static %}
+{% block content %}
+    <div class="container">
 
-</body>
-</html>
+        <h2 class="form-signin-heading text-center">使用您的帐户登录</h2>
+{#        <h2 class="form-signin-heading text-center">Sign in with your Account</h2>#}
+
+        <div class="card card-signin">
+            <img class="img-circle profile-img" src="{% static 'wiki/img/avatar.png' %}" alt="">
+            <form class="form-signin" action="{% url 'account:login' %}" method="post">
+                {% csrf_token %}
+                {% comment %}<label for="inputEmail" class="sr-only">Email address</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>{% endcomment %}
+                {{ form.non_field_errors }}
+                {% for field in form %}
+                    {{ field }}
+                    {{ field.errors }}
+                {% endfor %}
+
+                <input type="hidden" name="next" value="{{ redirect_to }}">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+{#                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>#}
+
+                <div class="checkbox">
+                    {% comment %}<a class="pull-right">Need help?</a>{% endcomment %}
+                    <label>
+                        <input type="checkbox" value="remember-me"> 保持登录</label>
+{#                        <input type="checkbox" value="remember-me"> Stay signed in</label>#}
+                </div>
+                {% load oauth_tags %}
+                {% load_oauth_applications request%}
+            </form>
+        </div>
+
+        <p class="text-center">
+            <a href="{% url "account:register" %}">创建用户</a>
+            |
+            <a href="/">主页</a>
+        </p>
+
+    </div> <!-- /container -->
+{% endblock %}
