--- a/templates/account/registration_form.html
+++ b/templates/account/registration_form.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'share_layout/base_account.html' %}
+{% load static %}
+{% block content %}
+    <div class="container">
 
-</body>
-</html>
+        <h2 class="form-signin-heading text-center">创建您的账户</h2>
+
+        <div class="card card-signin">
+            <img class="img-circle profile-img" src="{% static 'wiki/img/avatar.png' %}" alt="">
+            <form class="form-signin" action="{% url 'account:register' %}" method="post">
+                {% csrf_token %}
+                {{ form.non_field_errors }}
+                {% for field in form %}
+                    {{ field }}
+                    {{ field.errors }}
+                {% endfor %}
+
+
+                <button class="btn btn-lg btn-primary btn-block" type="submit">创建账户</button>
+
+            </form>
+        </div>
+
+        <p class="text-center">
+            <a href="{% url "account:login" %}">登录</a>
+        </p>
+
+    </div> <!-- /container -->
+{% endblock %}
